--- a/src/conex/Alumno.form
+++ b/src/conex/Alumno.form
@@ -1,4 +1,4 @@
-<?xml version="1.1" encoding="UTF-8" ?>
+<?xml version="1.0" encoding="UTF-8" ?>
 
 <Form version="1.6" maxVersion="1.7" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
@@ -33,7 +33,7 @@
                   <Group type="102" alignment="0" attributes="0">
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
                           <Component id="jPanel1" max="32767" attributes="1"/>
-                          <Component id="jPanel5" alignment="0" pref="343" max="32767" attributes="1"/>
+                          <Component id="jPanel5" alignment="0" pref="0" max="32767" attributes="1"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jScrollPane1" pref="354" max="32767" attributes="0"/>
@@ -114,7 +114,7 @@
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="btnfin" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <Component id="jPanel4" alignment="0" pref="333" max="32767" attributes="0"/>
+                      <Component id="jPanel4" alignment="0" max="32767" attributes="0"/>
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="btnagregar" min="-2" pref="88" max="-2" attributes="1"/>
@@ -247,7 +247,7 @@
                               <EmptySpace min="-2" pref="22" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                   <Component id="txtapellido" alignment="0" max="32767" attributes="1"/>
-                                  <Component id="txtnombre" alignment="0" pref="185" max="32767" attributes="1"/>
+                                  <Component id="txtnombre" alignment="0" max="32767" attributes="1"/>
                                   <Component id="txtdireccion" alignment="0" min="-2" pref="217" max="-2" attributes="1"/>
                               </Group>
                           </Group>
